test_suite/tests/ui/with-variant/skip_de_struct_field.stderr
error: variant `Struct` cannot have both #[serde(deserialize_with)] and a field `f1` marked with #[serde(skip_deserializing)]
  --> $DIR/skip_de_struct_field.rs:6:5
   |
6  | /     #[serde(deserialize_with = "deserialize_some_other_variant")]
7  | |     Struct {
8  | |         #[serde(skip_deserializing)]
9  | |         f1: String,
10 | |         f2: u8,
11 | |     },
   | |_____^

error: aborting due to previous error

